Fix person's photo position on small screens

--- a/Resources/Private/Scss/Sections/_substaff.scss
+++ b/Resources/Private/Scss/Sections/_substaff.scss
@@ -32,6 +32,11 @@
 .substaff_image {
 	float: right;
 	margin: 0 0 0 $grid;
+
+	@include respond-to(medium) {
+		float: none;
+		margin: 0 0 $grid;
+	}
 }
 
 .substaff_map-link {
